chore: add textView for probability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Keep Pushing</string>
-    <string name="find_jackpot">Temukan Jackpot</string>
+    <string name="find_jackpot">Find Jackpot</string>
     <string name="number">1</string>
     <string name="odd">Odd</string>
     <string name="even">Even</string>
-    <string name="start">Mulai Lagi</string>
+    <string name="start">Start Again!</string>
+    <string name="probability">Probability: </string>
 </resources>
